# BETter

./: .env.example  .gitignore  README.md  pyproject.toml  startup.md
models/: oof_predictions.joblib
models/bayesian_kalman/final/: kalman_state.joblib
models/bayesian_kalman/fold_2015/: kalman_state.joblib
models/bayesian_kalman/fold_2016/: kalman_state.joblib
models/bayesian_kalman/fold_2017/: kalman_state.joblib
models/bayesian_kalman/fold_2018/: kalman_state.joblib
models/bayesian_kalman/fold_2019/: kalman_state.joblib
models/bayesian_kalman/fold_2020/: kalman_state.joblib
models/bayesian_kalman/fold_2021/: kalman_state.joblib
models/bayesian_kalman/fold_2022/: kalman_state.joblib
models/bayesian_kalman/fold_2023/: kalman_state.joblib
models/bayesian_kalman/fold_2024/: kalman_state.joblib
models/bayesian_kalman/fold_2025/: kalman_state.joblib
models/meta_learner/final/: meta_learner.joblib
models/monte_carlo/final/: mc_state.joblib
models/monte_carlo/fold_2015/: mc_state.joblib
models/monte_carlo/fold_2016/: mc_state.joblib
models/monte_carlo/fold_2017/: mc_state.joblib
models/monte_carlo/fold_2018/: mc_state.joblib
results/: fold_results.csv  oof_details.csv  summary.csv
src/better/: __init__.py  cli.py  config.py  constants.py
src/better/api/: app.py  (+3 more)
tests/: conftest.py
tests/unit/: test_api.py  test_backtest.py  test_bankroll.py  test_bayesian.py  test_betting_engine.py  test_elo.py  test_evaluation.py  test_features.py  test_gbm.py  test_kalshi_feed.py  test_live_system.py  test_meta.py  test_monte_carlo.py  test_odds_converter.py  test_services.py  test_splits.py  test_stats.py
(+99 files in other folders)
