[project]
name = "better"
version = "0.1.0"
description = "MLB game prediction system with real-time win probability and betting optimization"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Data ingestion
    "duckdb>=1.1",
    "pandas>=2.1",
    "polars>=1.0",
    "pyarrow>=14.0",
    "pybaseball>=2.2.7",
    "MLB-StatsAPI>=1.7",
    "httpx>=0.27",
    # ML core
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "optuna>=3.4",
    # Deep learning (CPU for local inference; GPU training on Kaggle)
    "torch>=2.1",
    # Bayesian
    "statsmodels>=0.14",
    # API
    "fastapi>=0.110",
    "uvicorn>=0.25",
    "websockets>=12.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    # Dashboard
    "streamlit>=1.40",
    "plotly>=5.18",
    # Utilities
    "structlog>=23.2",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "tqdm>=4.66",
    "joblib>=1.3",
    "apscheduler>=3.10",
    "nicegui>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "jupyter>=1.0",
    "ipykernel>=6.27",
]

[project.scripts]
better = "better.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
